core(utils): Added javadoc on methods with clear documentation